--- a/boilerplate-npm/package.json
+++ b/boilerplate-npm/package.json
@@ -1,14 +1,23 @@
 {
-	"name": "fcc-learn-npm-package-json",
-	"dependencies": {
-		"express": "^4.14.0"
-	},
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
-	}
+  "author": "Gaurav Jagtap",
+  "name": "fcc-learn-npm-package-json",
+  "keywords": [
+    "freecodecamp",
+    "npm",
+    "packages"
+  ],
+  "license": "MIT",
+  "version": "1.0.0",
+  "description": "Learning to manage package packages with NPM with freeCodeCamp",
+  "dependencies": {
+    "express": "^4.14.0"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
+  }
 }
