--- a/boilerplate-express/package.json
+++ b/boilerplate-express/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "./schemas/package-schema.json",
   "name": "fcc-learn-node-with-express",
   "version": "0.1.0",
   "dependencies": {
@@ -6,10 +7,11 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.14.0",
-    "fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
+    "fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git",
+    "nodemon": "^3.1.9"
   },
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   }
 }
