--- a/boilerplate-project-urlshortener/package.json
+++ b/boilerplate-project-urlshortener/package.json
@@ -4,13 +4,17 @@
   "description": "API project for freeCodeCamp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongo-express": "^1.1.0-rc-3",
+    "mongoose": "^8.10.0",
+    "nodemon": "^3.1.9",
+    "url": "^0.11.4"
   },
   "license": "MIT"
 }
